--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
     <header class="main__hero">
       <h1>Landing Page </h1>
     </header>
-    <!-- Each Section has an ID (used for the anchor) and 
-    a data attribute that will populate the li node.
-    Adding more sections will automatically populate nav.
-    The first section is set to active class by default -->
-   
+    <div id="arrowTop" hidden></div>
+
   </main>
+
   <footer class="page__footer">
     <p>&copy Udacity</p>
   </footer>
